# projekt-gruppe4-hospital

./: README.md  Requirements.md
prog_tasks/csv_read_write/: main.c
prog_tasks/csv_read_write/unitTests/: main_mit_unitTest.c  patient_data.csv  unitTests.h
prog_tasks/time_t/: CMakeLists.txt  main.c
projekt_myHospital/projekt_myHospital/: CMakeLists.txt  Makefile  Projektdokumentation_Gruppe4.docx  README.md  Requirements.md
projekt_myHospital/projekt_myHospital/Unittests/: functions.c
projekt_myHospital/projekt_myHospital/Unittests_2/: CMakeLists.txt  Contact_Trace.cpp  main.cpp
projekt_myHospital/projekt_myHospital/Unittests_3/: Makefile  test_add_patient.cpp
projekt_myHospital/projekt_myHospital/include/: functions.h
projekt_myHospital/projekt_myHospital/logfiles/: er.txt
projekt_myHospital/projekt_myHospital/logfiles/patients/: patients_ambulance.txt  patients_other.txt
projekt_myHospital/projekt_myHospital/src/: functions.c  main.c  neighbours.txt  register.txt  seats.txt
projekt_myHospital/projekt_myHospital/src/patients/: patients.txt
projekt_myHospital/projekt_myHospital/test/: CMakeLists.txt  binary  functions.cpp  functions.h  main.cpp  register.txt  test_add_patient.cpp  test_loading_functions.cpp  test_moving_patients_functions.cpp
projekt_myHospital/projekt_myHospital/tests/unit-tests/: CMakeLists.txt  main.c
